--- a/index.html
+++ b/index.html
@@ -91,86 +91,86 @@
 <div id="root"></div>
 
 <script type="text/babel">
-    const additionalVerses = [
-        {
-            text: "For God has not given us a spirit of fear, but of power and of love and of a sound mind.",
-            reference: "2 Timothy 1:7",
-            reflection: "God empowers us with His spirit, replacing fear with strength, love, and clarity of mind."
-        },
-        {
-            text: "The Lord is my light and my salvation—whom shall I fear? The Lord is the stronghold of my life—of whom shall I be afraid?",
-            reference: "Psalm 27:1",
-            reflection: "With God as our protector, we have no reason to fear any earthly troubles."
-        },
-        {
-            text: "So do not fear, for I am with you; do not be dismayed, for I am your God. I will strengthen you and help you; I will uphold you with my righteous right hand.",
-            reference: "Isaiah 41:10",
-            reflection: "God promises His presence, strength, and support in times of fear and uncertainty."
-        },
-        {
-            text: "Have I not commanded you? Be strong and courageous. Do not be afraid; do not be discouraged, for the Lord your God will be with you wherever you go.",
-            reference: "Joshua 1:9",
-            reflection: "God commands us to be brave, assuring us of His constant presence in our lives."
-        },
-        {
-            text: "Therefore do not worry about tomorrow, for tomorrow will worry about itself. Each day has enough trouble of its own.",
-            reference: "Matthew 6:34",
-            reflection: "Jesus teaches us to focus on today and trust God with our future."
-        },
-        {
-            text: "Even though I walk through the darkest valley, I will fear no evil, for you are with me; your rod and your staff, they comfort me.",
-            reference: "Psalm 23:4",
-            reflection: "In our darkest moments, God's presence and guidance provide comfort and dispel fear."
-        },
-        {
-            text: "But now, this is what the Lord says— he who created you, Jacob, he who formed you, Israel: 'Do not fear, for I have redeemed you; I have summoned you by name; you are mine.'",
-            reference: "Isaiah 43:1",
-            reflection: "God reminds us that we belong to Him, offering comfort and security in His redemption."
-        },
-        {
-            text: "There is no fear in love. But perfect love drives out fear, because fear has to do with punishment. The one who fears is not made perfect in love.",
-            reference: "1 John 4:18",
-            reflection: "God's perfect love for us has the power to eliminate all fear from our lives."
-        },
-        {
-            text: "An anxious heart weighs a man down, but a kind word cheers him up.",
-            reference: "Proverbs 12:25",
-            reflection: "This proverb highlights how anxiety can burden us, but encouragement can lift our spirits."
-        },
-        {
-            text: "In peace I will lie down and sleep, for you alone, Lord, make me dwell in safety.",
-            reference: "Psalm 4:8",
-            reflection: "Trusting in God's protection allows us to find peace and rest, even in anxious times."
-        },
-        {
-            text: "Anxiety weighs down the heart, but a kind word cheers it up.",
-            reference: "Proverbs 12:25",
-            reflection: "This verse reminds us of the power of kind words to lift our spirits when anxiety threatens to overwhelm us."
-        }
-    ];
+const additionalVerses = [
+  {
+      text: "For God has not given us a spirit of fear, but of power and of love and of a sound mind. Second Timothy 1:7",
+      reference: "2 Timothy 1:7",
+      reflection: "God empowers us with His spirit, replacing fear with strength, love, and clarity of mind."
+  },
+  {
+      text: "The Lord is my light and my salvation—whom shall I fear? The Lord is the stronghold of my life—of whom shall I be afraid? Psalm 27:1",
+      reference: "Psalm 27:1",
+      reflection: "With God as our protector, we have no reason to fear any earthly troubles."
+  },
+  {
+      text: "So do not fear, for I am with you; do not be dismayed, for I am your God. I will strengthen you and help you; I will uphold you with my righteous right hand. Isaiah 41:10",
+      reference: "Isaiah 41:10",
+      reflection: "God promises His presence, strength, and support in times of fear and uncertainty."
+  },
+  {
+      text: "Have I not commanded you? Be strong and courageous. Do not be afraid; do not be discouraged, for the Lord your God will be with you wherever you go. Joshua 1:9",
+      reference: "Joshua 1:9",
+      reflection: "God commands us to be brave, assuring us of His constant presence in our lives."
+  },
+  {
+      text: "Therefore do not worry about tomorrow, for tomorrow will worry about itself. Each day has enough trouble of its own. Matthew 6:34",
+      reference: "Matthew 6:34",
+      reflection: "Jesus teaches us to focus on today and trust God with our future."
+  },
+  {
+      text: "Even though I walk through the darkest valley, I will fear no evil, for you are with me; your rod and your staff, they comfort me. Psalm 23:4",
+      reference: "Psalm 23:4",
+      reflection: "In our darkest moments, God's presence and guidance provide comfort and dispel fear."
+  },
+  {
+      text: "But now, this is what the Lord says— he who created you, Jacob, he who formed you, Israel: 'Do not fear, for I have redeemed you; I have summoned you by name; you are mine.' Isaiah 43:1",
+      reference: "Isaiah 43:1",
+      reflection: "God reminds us that we belong to Him, offering comfort and security in His redemption."
+  },
+  {
+      text: "There is no fear in love. But perfect love drives out fear, because fear has to do with punishment. The one who fears is not made perfect in love. First John 4:18",
+      reference: "1 John 4:18",
+      reflection: "God's perfect love for us has the power to eliminate all fear from our lives."
+  },
+  {
+      text: "An anxious heart weighs a man down, but a kind word cheers him up. Proverbs 12:25",
+      reference: "Proverbs 12:25",
+      reflection: "This proverb highlights how anxiety can burden us, but encouragement can lift our spirits."
+  },
+  {
+      text: "In peace I will lie down and sleep, for you alone, Lord, make me dwell in safety. Psalm 4:8",
+      reference: "Psalm 4:8",
+      reflection: "Trusting in God's protection allows us to find peace and rest, even in anxious times."
+  },
+  {
+      text: "Anxiety weighs down the heart, but a kind word cheers it up. Proverbs 12:25",
+      reference: "Proverbs 12:25",
+      reflection: "This verse reminds us of the power of kind words to lift our spirits when anxiety threatens to overwhelm us."
+  }
+];
 
-    const initialVerses = [
-        {
-            text: "Do not be anxious about anything, but in every situation, by prayer and petition, with thanksgiving, present your requests to God. And the peace of God, which transcends all understanding, will guard your hearts and your minds in Christ Jesus.",
-            reference: "Philippians 4:6-7",
-            reflection: "This verse reminds us to bring our anxieties to God in prayer, trusting that His peace will protect our hearts and minds."
-        },
-        {
-            text: "Cast all your anxiety on him because he cares for you.",
-            reference: "1 Peter 5:7",
-            reflection: "God invites us to give Him our worries, assuring us of His loving care for us."
-        },
-        {
-            text: "When anxiety was great within me, your consolation brought me joy.",
-            reference: "Psalm 94:19",
-            reflection: "Even in moments of great anxiety, we can find joy in God's comforting presence."
-        },
-        {
-            text: "Peace I leave with you; my peace I give you. I do not give to you as the world gives. Do not let your hearts be troubled and do not be afraid.",
-            reference: "John 14:27",
-            reflection: "Jesus offers us a unique peace that can calm our troubled hearts and dispel our fears."
-        }
-    ];
+const initialVerses = [
+  {
+      text: "Do not be anxious about anything, but in every situation, by prayer and petition, with thanksgiving, present your requests to God. And the peace of God, which transcends all understanding, will guard your hearts and your minds in Christ Jesus. Philippians 4:6-7",
+      reference: "Philippians 4:6-7",
+      reflection: "This verse reminds us to bring our anxieties to God in prayer, trusting that His peace will protect our hearts and minds."
+  },
+  {
+      text: "Cast all your anxiety on him because he cares for you. First Peter 5:7",
+      reference: "1 Peter 5:7",
+      reflection: "God invites us to give Him our worries, assuring us of His loving care for us."
+  },
+  {
+      text: "When anxiety was great within me, your consolation brought me joy. Psalm 94:19",
+      reference: "Psalm 94:19",
+      reflection: "Even in moments of great anxiety, we can find joy in God's comforting presence."
+  },
+  {
+      text: "Peace I leave with you; my peace I give you. I do not give to you as the world gives. Do not let your hearts be troubled and do not be afraid. John 14:27",
+      reference: "John 14:27",
+      reflection: "Jesus offers us a unique peace that can calm our troubled hearts and dispel our fears."
+  }
+];
 
     function Verse({ verse, onListen, onStop, isSpeaking }) {
         return (
