--- a/index.html
+++ b/index.html
@@ -86,6 +86,15 @@
         margin-top: 20px;
     }
 </style>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-P4C1QEQMW3"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+    
+      gtag('config', 'G-P4C1QEQMW3');
+    </script>
 </head>
 <body>
 <div id="root"></div>
